--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,20 @@ body {
   box-sizing: 0;
   background-color: #fff;
 }
+.SmallMsg{
+  color: red;
+  margin-top: 10px;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+}
+.AdmLineDif{
+  width: 100%;
+  height: 7px;
+  background-color: #30842593;
+  border-radius: 20px;
+  margin: 45px 0;
+}
 
 .cardpcc {
   border-radius: 10px;
@@ -391,12 +405,17 @@ body {
 .BigContainer {
   background-color: #fff;
 }
-
+.ComtaTabAss{
+  width: 50%;
+}
 @media screen and (max-width: 692px) {
   .WidthCardDsb {
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+  .ComtaTabAss{
+    width: 100%;
   }
 }
 
