--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@ body {
 }
 .AdmLineDif {
   width: 100%;
-  height: 7px;
-  background-color: #30842593;
+  height: 2px;
+  background-color: #3084b5;
   border-radius: 20px;
   margin: 45px 0;
 }
@@ -980,16 +980,31 @@ body {
 .form-demo .card .field {
   margin-bottom: 1.5rem;
 }
-@media screen and (max-width: 1024px) {
+.form-demo .inscributton {
+  background-color: #3084b5;
+  border-radius: 9px;
+}
+.boutonAssign {
+  background-color: #3084b5;
+  border-radius: 9px;
+}
+
+@media (max-width: 1024px) {
   .form-demo .card {
     width: 80%;
-    min-width: 95vw;
+    min-width: 92vw;
+  }
+  .domaine {
+    width: 92vw;
   }
 }
 @media screen and (max-width: 640px) {
   .form-demo .card {
     width: 100%;
-    min-width: 93vw;
+    min-width: 90vw;
+  }
+  .domaine {
+    width: 90vw;
   }
 }
 
@@ -997,3 +1012,15 @@ body {
   background-color: rgb(247, 239, 239) !important;
 }
 /*Fin */
+
+.myTable {
+  max-height: 500px;
+}
+
+@media (max-width: 1024px) {
+  /* Adjust the min-width as needed for 'large screens' */
+  .myTable {
+    overflow: scroll;
+    max-width: 90vw;
+  }
+}
