--- a/src/App.css
+++ b/src/App.css
@@ -988,6 +988,11 @@ body {
   background-color: #3084b5;
   border-radius: 9px;
 }
+.holder {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
 @media (max-width: 1024px) {
   .form-demo .card {
@@ -996,6 +1001,10 @@ body {
   }
   .domaine {
     width: 92vw;
+  }
+  .holder {
+    display: flex;
+    flex-direction: row;
   }
 }
 @media screen and (max-width: 640px) {
