--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -10,14 +10,14 @@ body {
   box-sizing: 0;
   background-color: #fff;
 }
-.SmallMsg{
+.SmallMsg {
   color: red;
   margin-top: 10px;
   display: block;
   font-weight: bold;
   text-align: center;
 }
-.AdmLineDif{
+.AdmLineDif {
   width: 100%;
   height: 7px;
   background-color: #30842593;
@@ -56,7 +56,7 @@ body {
   text-align: left !important;
 }
 
-.module-container input[type='radio'] {
+.module-container input[type="radio"] {
   --webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -554,7 +554,7 @@ body {
 .BigContainer {
   background-color: #fff;
 }
-.ComtaTabAss{
+.ComtaTabAss {
   width: 50%;
 }
 @media screen and (max-width: 692px) {
@@ -563,7 +563,7 @@ body {
     display: flex;
     justify-content: center;
   }
-  .ComtaTabAss{
+  .ComtaTabAss {
     width: 100%;
   }
 }
@@ -970,10 +970,12 @@ body {
 /* Css ajout de l'utilisateur côté admin par oury */
 .form-demo {
   display: flex;
+  justify-content: center !important;
   margin-top: 20px;
 }
 .form-demo .card {
-  min-width: 450px;
+  min-width: 500px;
+  border: none !important;
 }
 .form-demo .card form {
   margin-top: 2rem;
