--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -66,12 +66,13 @@ Vert
 } */
 .searchForm #navbar-input-container input {
   outline: none !important;
+  color: #0071bd; 
   background-color: transparent;
   border-bottom: 1px solid #0071bd !important;
 }
 
 .searchForm #navbar-input-container input::placeholder {
-  color: #fff;
+  color: #0071bd;
   font-style: italic;
 }
 
@@ -81,6 +82,10 @@ Vert
 
 .userChat .userChatInfo .userChatInfoName {
   font-size: 12px;
+  color: #0071bd;
+}
+.search .searchForm #searchFormBtn{
+  color: #0071bd;
 }
 .search .searchForm #searchFormBtn,
 .search .userChatContainer {
