--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -163,10 +163,19 @@ Vert
 }
 .chats .userChat {
   cursor: pointer;
-  width: 60px;
+  width: 75px;
   overflow-x: hidden;
   /* flex-wrap: nowrap; */
 }
+/* .chats .admin:hover{
+  background-color: rgba(255, 215, 0, 0.3);
+}
+.chats .coach:hover{
+  background-image: linear-gradient(90deg, #ffb338 10%, #77571d 25%, #3e2904 75%);
+}
+.chats .etudiant:hover{
+  background-color: #48a93c;
+} */
 .chats .userChat span {
   font-size: 12px;
   color: #333;
@@ -176,7 +185,7 @@ Vert
   color: #333;
 }
 /* ================================================== 
-                SEARCH-FORM 
+                
    ================================================== */
 .form-control:focus {
   box-shadow: none;
