Ajout des cours et affichages des images illustrant le sous domaine correspondant

--- a/src/App.css
+++ b/src/App.css
@@ -800,10 +800,10 @@ body {
   color: #fff;
 }
 .sidebar .active {
-  background-color:  #0834c4b7 !important;
+  background-color:  #48a93c !important;
   color: #fff !important;
   font-weight: bold;
-  border-right: 10px solid  #0a0da7 !important;
+  border-right: 10px solid  #3e9133 !important;
   /* transition: 0.5s; */
 }
 
