--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ body {
   margin-bottom: 10px;
   cursor: pointer;
   padding: 20px;
+  font-size: 20px;
   border-left: 5px solid #48a93c !important;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -106,6 +107,13 @@ body {
   font-size: 16px;
   width: 65%;
   color: #000000;
+  border-radius: 40px;
+  margin: 10px;
+  text-align: left;
+  /* width: 50%;
+  height: 80px;
+  border-radius: 1px solid red;
+  background-color: red; */
 }
 
 .module-container .paragraph {
