--- a/src/assets/css/single-program.css
+++ b/src/assets/css/single-program.css
@@ -73,13 +73,41 @@
   height: 120px;
   border-bottom: 1px solid #ddd;
 }
-
+.cours-section {
+  width: 100%;
+}
+.cours-section .card {
+  width: 100%;
+}
 .blog-card h2 {
   font-size: 1.2em;
   margin: 10px 0;
 }
+iframe {
+  width: 100%;
+  height: 35rem;
+}
 @media (max-width: 1024px) {
   .blog-card {
     width: 100%;
+  }
+  .main-container {
+    width: 90vw;
+  }
+  .header-section {
+    width: 90vw;
+  }
+  .addCours {
+    width: 100%;
+  }
+  .cours-section {
+    width: 100%;
+  }
+  .cours-section .card {
+    width: 100%;
+  }
+  iframe {
+    width: 100%;
+    height: 250px;
   }
 }
