--- a/src/App.css
+++ b/src/App.css
@@ -975,8 +975,8 @@ body {
   }
 }
 .program-img {
-  width: 250px;
-  height: 200px;
+  width: 100%;
+  height: 180px;
 }
 .program-img img {
   width: 100%;
