--- a/src/App.css
+++ b/src/App.css
@@ -1024,14 +1024,15 @@ body {
   gap: 10px;
 }
 .titleHolder {
-  background: linear-gradient(to bottom, #3084b5, #1a638e);
+  background-color: #3e9133;
   padding: 5px 10px;
   width: fit-content;
   text-align: end;
   color: white;
-  font-size: 10px;
+  font-size: 15px;
   display: flex;
   float: right;
+  font-weight: bold;
   position: absolute;
   right: 0;
   margin-right: 10px;
