--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -242,7 +242,7 @@ Vert
 }
 .messages .message span,
 .messages .owner span {
-  font-size: 12px;
+  font-size: 9px;
 }
 .messages .message .messageContent img,
 .messages .owner .messageContent img {
@@ -250,15 +250,24 @@ Vert
   object-fit: cover;
 }
 .messages .message .messageContent p {
+  position: relative;
   max-width: fit-content;
   border-radius: 0 10px 10px 10px;
   background-color: #3084b5 !important;
 }
+.messages .message .messageContent p span,
+.messages .owner .messageContent p span{
+  position: absolute;
+  bottom: 2px;
+  right: 10px;
+}
 .messages .owner .messageContent p {
+  position: relative;
   max-width: fit-content;
   border-radius: 10px 0 10px 10px;
   background-color: #48a93c !important;
 }
+
 /* Styles pour la barre de défilement */
 .messages::-webkit-scrollbar {
   width: 6px;
@@ -273,6 +282,14 @@ Vert
 .messages::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+/* ================================================== 
+                MESSAGE
+   ================================================== */
+/* .message .messageContent span,
+.owner .messageContent span{
+
+} */
 
 /* ================================================== 
                 CHAT-INPUT
