--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,11 @@ body {
   background-color: whitesmoke !important;
 }
 .suppNotif {
-  border-radius: 0px 10px 10px 1px;
+  border-radius: 0px 10px 10px 0px;
+}
+
+.contentNotif{
+  border-radius: 10px 0px 0px 10px;
 }
 
 .transition-fade {
