--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ body {
   border-radius: 0px 10px 10px 0px;
 }
 
-.contentNotif{
+.contentNotif {
   border-radius: 10px 0px 0px 10px;
 }
 
@@ -1031,7 +1031,7 @@ body {
   padding: 5px 10px;
   width: fit-content;
   text-align: end;
-  color: white;
+  color: black;
   font-size: 15px;
   display: flex;
   float: right;
