--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,12 @@ body {
   font-family: Montserrat;
   font-size: 16px;
   width: 65%;
+  text-align: left;
+  border-radius: 20px;
   color: #000000;
+}
+
+.label{
 }
 
 .module-container .paragraph {
