--- a/src/App.css
+++ b/src/App.css
@@ -1028,17 +1028,18 @@ body {
   gap: 10px;
 }
 .titleHolder {
+  background: #3084b5;
   padding: 5px 10px;
   width: fit-content;
   text-align: end;
-  color: black;
+  color: white;
   font-size: 15px;
+  top: 7.47em;
   display: flex;
   float: right;
   font-weight: bold;
   position: absolute;
   right: 0;
-  margin-right: 10px;
 }
 .bodyCoursCards {
   background: linear-gradient(to bottom, #3084b5, #1a638e);
