--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -34,7 +34,7 @@ Vert
   overflow: hidden;
   background-color: #fff;
   transition: 0.2s ease-in-out;
-  border-bottom: 3px solid #0071bd;
+  border-bottom: 3px solid #48a93c;
 }
 .chatHomeDisplay {
   transition: 0.9s ease;
