--- a/src/App.css
+++ b/src/App.css
@@ -992,6 +992,11 @@ body {
 .divard {
   display: flex !important;
 }
+.nicePic,.nicePic img{
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+}
 /*   Fin Mariama Css */
 /*  */
 
