--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -27,12 +27,10 @@ Vert
   background-color: #0071bd;
 }
 .chatHomeDisplay{
-    transition: 0.9s ease;
-    transform: translateY(-1000%); 
+    display: none;
 }
-.chatHomeDisplayYes{
-    transition: 0.4s ease;
-    transform: translateY(0%); 
+.chatHomeDisplayYes{ 
+    display: block;
 }
 .chatHome {
   /* border: 0.01rem solid #333; */
