--- a/src/assets/css/quizz.css
+++ b/src/assets/css/quizz.css
@@ -144,11 +144,11 @@
   background-color: #48a93c;
 }
 
-.quiz .btn-quiz {
+.btn-quiz {
   width: 25%;
 }
 
-.quiz .btn-dash {
+.btn-dash {
   text-align: center;
 }
 
