--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: #fff;
 }
 
@@ -981,9 +981,9 @@ textarea:focus {
   display: flex;
   margin-top: 20px;
 }
+
 .form-demo .card {
-  min-width: 500px;
-  border: none !important;
+  min-width: 450px;
 }
 .form-demo .card form {
   margin-top: 2rem;
@@ -991,9 +991,16 @@ textarea:focus {
 .form-demo .card .field {
   margin-bottom: 1.5rem;
 }
-.form-demo .inscributton {
-  background-color: #3084b5;
-  border-radius: 9px;
+@media screen and (max-width: 960px) {
+  .form-demo .card {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .form-demo .card {
+    width: 100%;
+    min-width: 0;
+  }
 }
 .boutonAssign {
   background-color: #3084b5;
