--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   font-weight: bold;
   text-align: center;
 }
-.MargeLivraison{
+.MargeLivraison {
   width: 100%;
   height: 5px;
   background-color: #1a638e95;
@@ -43,13 +43,12 @@ body {
   border: 2px solid #066e41ca;
 }
 
-
 /* Style de la barre de défilement verticale */
 .AreaModifTextPub::-webkit-scrollbar {
   width: 10px;
   display: none;
 }
-.AreaModifDesc::-webkit-scrollbar{
+.AreaModifDesc::-webkit-scrollbar {
   width: 10px;
 }
 
@@ -57,7 +56,6 @@ body {
   background-color: #92a3ac; /* Couleur de la barre de défilement */
   border-radius: 15px; /* Coins arrondis */
 }
-
 
 .AreaModifDesc::-webkit-scrollbar-track {
   background-color: #ffffff00; /* Couleur de la piste de défilement */
@@ -534,38 +532,37 @@ body {
 }
 .inputStyle {
   border: 1px solid #3084b5;
-  padding:  8px 14px;
+  padding: 8px 14px;
   color: white;
-  background-color: #3084b5 ;
+  background-color: #3084b5;
   border-radius: 6px;
   font-size: 18px;
 }
 
-.inputStyle:hover{
+.inputStyle:hover {
   background-color: #28a745;
 }
-.AreaDesc{
-  height: 80px ;
+.AreaDesc {
+  height: 80px;
   width: 94%;
   margin: auto;
   border: 2px solid #4f504fa9;
   border-radius: 15px;
 }
-.TitreRecup:focus{
+.TitreRecup:focus {
   outline: none;
-  border: none !important;;
+  border: none !important;
 }
-.TitreRecup{
+.TitreRecup {
   width: 90%;
   border: none !important;
   font-size: 18px;
 }
 .output {
   width: 240px;
-  height:120px;
+  height: 120px;
   border: 2px solid #0056b3;
   border-radius: 20px;
-
 }
 /* Suivi du programme */
 .category-card {
@@ -806,7 +803,6 @@ body {
     margin-left: 40px;
   }
 }
-*/
 
 /*-----------------------Sidebar---------------------*/
 .sidebar {
