--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -119,7 +116,7 @@ body {
   text-align: left !important;
 }
 
-.module-container input[type='radio'] {
+.module-container input[type="radio"] {
   --webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -1124,7 +1121,7 @@ textarea:focus {
 /* CSS pour la certification */
 .certificate-display {
   color: #333;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .card {
@@ -1172,7 +1169,7 @@ textarea:focus {
   width: 269px; /* Adjust the width as needed */
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   overflow: hidden;
 }
 .card-image2 {
